# c-iota-workshop

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE
examples/: BUILD  CMakeLists.txt  config.h  e01_hello_world.c  e02_send_fetch_hello.c  e02_send_hello.c  e03_fetch_message.c  e03_receive_hello.c  e04_generate_address.c  e05_check_balance.c  e06_send_tokens.c
iota_client_service/: BUILD  client_service.c  client_service.h  config.h
